Fix styling and alignment of items

--- a/src/components/SortingVisualizer/SortingVisualizer.scss
+++ b/src/components/SortingVisualizer/SortingVisualizer.scss
@@ -1,7 +1,5 @@
-.sorting-vis {
-  position: absolute;
-  left: 100px;
-  text-align: center;
+.sorting-visualizer {
+  margin: 2.5vh 0;
 }
 
 .bar {
